# ergctl

./: Cargo.toml  Makefile  PKGBUILD  README.md  install.sh
config/: ergctl.conf  proart-power.conf
contrib/waybar/: custom-ergctl.jsonc  style-snippet.css
src/: apply.rs  audioguard.rs  config.rs  dgpuwatch.rs  gpuguard.rs  lib.rs  main.rs  readers.rs  sysfs.rs  tui.rs  waybar.rs
systemd/: ergctl-dgpu-watch.service  ergctl-resume.service  ergctl.service  proart-power-resume.service  proart-power.service
udev/: 99-ergctl.rules  99-proart-power.rules
