[package]
name = "ergctl"
version = "0.2.0"
edition = "2021"
description = "Power cockpit for the ASUS ProArt P16 — CLI + TUI (battery / AC / turbo)"
license = "MIT"

[lib]
name = "ergctl"
path = "src/lib.rs"

[[bin]]
name = "ergctl"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"

[profile.release]
opt-level = "z"
lto = true
strip = true
